--- a/Vengine/Vengine.vcxproj
+++ b/Vengine/Vengine.vcxproj
@@ -72,19 +72,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>.</OutDir>
+    <OutDir>.\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>.</OutDir>
+    <OutDir>.\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>.</OutDir>
+    <OutDir>.\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>.</OutDir>
+    <OutDir>.\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -95,6 +95,8 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;D:\Programms\STB\stb-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <ObjectFileName>$(IntDir)/%(RelativeDir)/</ObjectFileName>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -115,6 +117,8 @@
       <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;D:\Programms\STB\stb-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <ObjectFileName>$(IntDir)/%(RelativeDir)/</ObjectFileName>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -134,6 +138,8 @@
       <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;D:\Programms\STB\stb-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <ObjectFileName>$(IntDir)/%(RelativeDir)/</ObjectFileName>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -154,6 +160,8 @@
       <AdditionalIncludeDirectories>D:\Programms\Vulkan\1.2.154.1\Include;D:\Programms\GLFW\glfw-3.3.2.bin.WIN64\include;D:\Programms\GLM\GLM-0.9.9.8;D:\Programms\STB\stb-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <ObjectFileName>$(IntDir)/%(RelativeDir)/</ObjectFileName>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -180,7 +188,12 @@
     <ClCompile Include="graphics\vulkanWrapper\commandBuffer.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\descriptorPool.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\descriptorSetLayout.cpp" />
-    <ClCompile Include="graphics\vulkanWrapper\descriptorSet.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\descriptorSet.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="graphics\vulkanWrapper\frameBuffer.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\image.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\instance.cpp" />
@@ -188,11 +201,13 @@
     <ClCompile Include="graphics\vulkanWrapper\pipelineLayout.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\device.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\swapChain.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\swapChainSupportDetails.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\synchronization.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\texture.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\transitionImageLayout.cpp" />
     <ClCompile Include="graphics\vulkanWrapper\validationLayers.cpp" />
-    <ClCompile Include="graphics\vulkanWrapper\Vertex.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\vertex.cpp" />
+    <ClCompile Include="graphics\vulkanWrapper\vulkanWrapper.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="graphics\Model.cpp" />
     <ClCompile Include="graphics\Mesh.cpp" />
@@ -233,12 +248,13 @@
     <ClInclude Include="graphics\vulkanWrapper\pipeline.h" />
     <ClInclude Include="graphics\vulkanWrapper\pipelineLayout.h" />
     <ClInclude Include="graphics\vulkanWrapper\device.h" />
+    <ClInclude Include="graphics\vulkanWrapper\swapChainSupportDetails.h" />
     <ClInclude Include="graphics\vulkanWrapper\synchronization.h" />
     <ClInclude Include="graphics\vulkanWrapper\texture.h" />
     <ClInclude Include="graphics\vulkanWrapper\transitionImageLayout.h" />
     <ClInclude Include="graphics\vulkanWrapper\validationLayers.h" />
     <ClInclude Include="graphics\vulkanWrapper\swapChain.h" />
-    <ClInclude Include="graphics\vulkanWrapper\Vertex.h" />
+    <ClInclude Include="graphics\vulkanWrapper\vertex.h" />
     <ClInclude Include="graphics\vulkanWrapper\vulkanWrapper.h" />
     <ClInclude Include="graphics\Model.h" />
     <ClInclude Include="graphics\Mesh.h" />
